# exifcopy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  exifcopy.rs  jpeg.rs  lib.rs  log.rs  main.rs  write.rs
src/exifcopy/: config.rs
src/shared/: filecheck.rs  mod.rs  segmentmanipulator.rs  settings.rs
