[package]
name = "exifcopy"
version = "0.9.3"
edition = "2024"
authors = ["Holger Burghardt"]
description = "Copies metadata from an original JPEG to an optimized version, preserving all identifiable metadata, including but not limited to EXIF, XMP, and IPTC."
license = "AGPL-3.0-or-later"
repository = "https://github.com/HBB-ThinkTank/exifcopy"
homepage = "https://github.com/HBB-ThinkTank/exifcopy"
readme = "README.md"
keywords = ["jpeg", "exif", "metadata", "image", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
build = "build.rs"

[dependencies]
byteorder = "1.5"
chrono = "0.4"
filetime = "0.2.25"
once_cell = "1.21.3"
regex = "1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }

[build-dependencies]
chrono = "0.4"